feat(news-page): create 'news' page & section component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -343,7 +343,8 @@ dialog {
 
 .hero-quiz,
 .user-login,
-.not-found {
+.not-found,
+.news {
   min-height: calc(100vh - var(--main-header-height));
 }
 
