--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -348,6 +348,12 @@ dialog {
   min-height: calc(100vh - var(--main-header-height));
 }
 
+.hero-quiz,
+.user-login,
+.not-found {
+  padding: calc(var(--main-header-height) * .75) 0;
+}
+
 .user-details {
   padding: calc(var(--base-size) * 6) 0;
 }
