--- a/src/app/quiz/quiz.module.css
+++ b/src/app/quiz/quiz.module.css
@@ -1,19 +1,19 @@
 #hero-javascript {
   --js-default: 12 52 8;
 
-  background: url(/img/stars.svg), radial-gradient(rgb(var(--js-default)) -10%, rgb(var(--background)) 60%);
+  background: radial-gradient(rgb(var(--js-default)) -10%, rgb(var(--background)) 60%);
 }
 
 #hero-rust {
   --rust-default: 42 9 12;
   
-  background: url(/img/stars.svg), radial-gradient(rgb(var(--rust-default)) -10%, rgb(var(--background)) 60%);
+  background: radial-gradient(rgb(var(--rust-default)) -10%, rgb(var(--background)) 60%);
 }
 
 #hero-kotlin {
   --kotlin-default: 29 39 42;
   
-  background: url(/img/stars.svg), radial-gradient(rgb(var(--kotlin-default)) -10%, rgb(var(--background)) 60%);
+  background: radial-gradient(rgb(var(--kotlin-default)) -10%, rgb(var(--background)) 60%);
 }
 
 #hero-javascript,
